maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: not found: value random2
      r = random2()
          ^